# fastembed-qdrant

./: .gitignore  CREATION_SUMMARY.md  Dockerfile  FastEmbed_Diagnosis.md  LICENSE  Makefile  OBSERVABILITY_PHASE1_COMPLETE.md  OBSERVABILITY_PLAN.md  README-HTTP-OBSERVABILITY.md  README.md  STARTUP_FIX_SUMMARY.md  demo_http_observability.py  demo_observability_phase1.py  dev.sh  docker-compose-wqdrant.yml  docker-compose.yml  docker-health-check.sh  fastembed_sessionization_architecture.md  load_env.sh  pyproject.toml  requirements.txt  start_both.sh  start_unified.sh  start_with_http.sh  test_container_startup.sh
.goose/memory/: fastembed-health-checks.txt  fastembed-observability-http.txt  fastembed-observability-phase1.txt  fastembed-observability.txt
cache/: README.md
src/: __init__.py  client_example.py  config.py  embed_pb2.py  enhanced_server.py  grpc_server.py  http_server.py  http_server_enhanced.py  http_server_with_observability.py  model_config.py  qdrant_store.py  text_chunker.py
src/health/: __init__.py  container_health.py  health_checker.py  health_config.py
src/observability/: __init__.py  log_config.py  log_context.py  logger.py  metrics.py
src/proto/: __init__.py  embed.proto  embed_pb2.py  embed_pb2_grpc.py
